@@ -30,6 +30,16 @@ begin_import
 import|import
 name|java
 operator|.
+name|io
+operator|.
+name|FileNotFoundException
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
 name|util
 operator|.
 name|HashSet
@@ -338,9 +348,49 @@ throws|,
 name|IOException
 block|{
 return|return
-operator|(
+name|open
+argument_list|(
+name|directory
+argument_list|,
+name|closeDirectory
+argument_list|,
+name|deletionPolicy
+argument_list|,
+literal|null
+argument_list|)
+return|;
+block|}
+DECL|method|open
+specifier|static
 name|DirectoryIndexReader
-operator|)
+name|open
+parameter_list|(
+specifier|final
+name|Directory
+name|directory
+parameter_list|,
+specifier|final
+name|boolean
+name|closeDirectory
+parameter_list|,
+specifier|final
+name|IndexDeletionPolicy
+name|deletionPolicy
+parameter_list|,
+specifier|final
+name|IndexCommit
+name|commit
+parameter_list|)
+throws|throws
+name|CorruptIndexException
+throws|,
+name|IOException
+block|{
+name|SegmentInfos
+operator|.
+name|FindSegmentsFile
+name|finder
+init|=
 operator|new
 name|SegmentInfos
 operator|.
@@ -437,10 +487,57 @@ name|reader
 return|;
 block|}
 block|}
+decl_stmt|;
+if|if
+condition|(
+name|commit
+operator|==
+literal|null
+condition|)
+return|return
+operator|(
+name|DirectoryIndexReader
+operator|)
+name|finder
 operator|.
 name|run
 argument_list|()
 return|;
+else|else
+block|{
+if|if
+condition|(
+name|directory
+operator|!=
+name|commit
+operator|.
+name|getDirectory
+argument_list|()
+condition|)
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"the specified commit does not match the specified Directory"
+argument_list|)
+throw|;
+comment|// This can& will directly throw IOException if the
+comment|// specified commit point has been deleted:
+return|return
+operator|(
+name|DirectoryIndexReader
+operator|)
+name|finder
+operator|.
+name|doBody
+argument_list|(
+name|commit
+operator|.
+name|getSegmentsFileName
+argument_list|()
+argument_list|)
+return|;
+block|}
 block|}
 DECL|method|reopen
 specifier|public
@@ -1413,6 +1510,210 @@ name|segmentInfos
 argument_list|,
 name|directory
 argument_list|)
+return|;
+block|}
+comment|/** @see IndexReader#listCommits */
+DECL|method|listCommits
+specifier|public
+specifier|static
+name|Collection
+name|listCommits
+parameter_list|(
+name|Directory
+name|dir
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+specifier|final
+name|String
+index|[]
+name|files
+init|=
+name|dir
+operator|.
+name|list
+argument_list|()
+decl_stmt|;
+if|if
+condition|(
+name|files
+operator|==
+literal|null
+condition|)
+throw|throw
+operator|new
+name|IOException
+argument_list|(
+literal|"cannot read directory "
+operator|+
+name|dir
+operator|+
+literal|": list() returned null"
+argument_list|)
+throw|;
+name|Collection
+name|commits
+init|=
+operator|new
+name|ArrayList
+argument_list|()
+decl_stmt|;
+name|SegmentInfos
+name|latest
+init|=
+operator|new
+name|SegmentInfos
+argument_list|()
+decl_stmt|;
+name|latest
+operator|.
+name|read
+argument_list|(
+name|dir
+argument_list|)
+expr_stmt|;
+specifier|final
+name|long
+name|currentGen
+init|=
+name|latest
+operator|.
+name|getGeneration
+argument_list|()
+decl_stmt|;
+name|commits
+operator|.
+name|add
+argument_list|(
+operator|new
+name|ReaderCommit
+argument_list|(
+name|latest
+argument_list|,
+name|dir
+argument_list|)
+argument_list|)
+expr_stmt|;
+for|for
+control|(
+name|int
+name|i
+init|=
+literal|0
+init|;
+name|i
+operator|<
+name|files
+operator|.
+name|length
+condition|;
+name|i
+operator|++
+control|)
+block|{
+specifier|final
+name|String
+name|fileName
+init|=
+name|files
+index|[
+name|i
+index|]
+decl_stmt|;
+if|if
+condition|(
+name|fileName
+operator|.
+name|startsWith
+argument_list|(
+name|IndexFileNames
+operator|.
+name|SEGMENTS
+argument_list|)
+operator|&&
+operator|!
+name|fileName
+operator|.
+name|equals
+argument_list|(
+name|IndexFileNames
+operator|.
+name|SEGMENTS_GEN
+argument_list|)
+operator|&&
+name|SegmentInfos
+operator|.
+name|generationFromSegmentsFileName
+argument_list|(
+name|fileName
+argument_list|)
+operator|<
+name|currentGen
+condition|)
+block|{
+name|SegmentInfos
+name|sis
+init|=
+operator|new
+name|SegmentInfos
+argument_list|()
+decl_stmt|;
+try|try
+block|{
+comment|// IOException allowed to throw there, in case
+comment|// segments_N is corrupt
+name|sis
+operator|.
+name|read
+argument_list|(
+name|dir
+argument_list|,
+name|fileName
+argument_list|)
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|FileNotFoundException
+name|fnfe
+parameter_list|)
+block|{
+comment|// LUCENE-948: on NFS (and maybe others), if
+comment|// you have writers switching back and forth
+comment|// between machines, it's very likely that the
+comment|// dir listing will be stale and will claim a
+comment|// file segments_X exists when in fact it
+comment|// doesn't.  So, we catch this and handle it
+comment|// as if the file does not exist
+name|sis
+operator|=
+literal|null
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|sis
+operator|!=
+literal|null
+condition|)
+name|commits
+operator|.
+name|add
+argument_list|(
+operator|new
+name|ReaderCommit
+argument_list|(
+name|sis
+argument_list|,
+name|dir
+argument_list|)
+argument_list|)
+expr_stmt|;
+block|}
+block|}
+return|return
+name|commits
 return|;
 block|}
 block|}
