@@ -68,6 +68,16 @@ end_import
 
 begin_import
 import|import
+name|java
+operator|.
+name|util
+operator|.
+name|Collection
+import|;
+end_import
+
+begin_import
+import|import
 name|org
 operator|.
 name|apache
@@ -1330,6 +1340,7 @@ operator|)
 operator|>
 literal|0
 decl_stmt|;
+comment|// Never deletes a commit
 name|KeepAllDeletionPolicy
 name|policy
 init|=
@@ -1403,6 +1414,21 @@ argument_list|(
 name|writer
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|autoCommit
+operator|&&
+name|i
+operator|%
+literal|10
+operator|==
+literal|0
+condition|)
+name|writer
+operator|.
+name|commit
+argument_list|()
+expr_stmt|;
 block|}
 name|writer
 operator|.
@@ -1475,6 +1501,92 @@ operator|.
 name|numOnCommit
 argument_list|)
 expr_stmt|;
+comment|// Test listCommits
+name|Collection
+name|commits
+init|=
+name|IndexReader
+operator|.
+name|listCommits
+argument_list|(
+name|dir
+argument_list|)
+decl_stmt|;
+if|if
+condition|(
+operator|!
+name|autoCommit
+condition|)
+comment|// 1 from opening writer + 2 from closing writer
+name|assertEquals
+argument_list|(
+literal|3
+argument_list|,
+name|commits
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+else|else
+comment|// 1 from opening writer + 2 from closing writer +
+comment|// 11 from calling writer.commit() explicitly above
+name|assertEquals
+argument_list|(
+literal|14
+argument_list|,
+name|commits
+operator|.
+name|size
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Iterator
+name|it
+init|=
+name|commits
+operator|.
+name|iterator
+argument_list|()
+decl_stmt|;
+comment|// Make sure we can open a reader on each commit:
+while|while
+condition|(
+name|it
+operator|.
+name|hasNext
+argument_list|()
+condition|)
+block|{
+name|IndexCommit
+name|commit
+init|=
+operator|(
+name|IndexCommit
+operator|)
+name|it
+operator|.
+name|next
+argument_list|()
+decl_stmt|;
+name|IndexReader
+name|r
+init|=
+name|IndexReader
+operator|.
+name|open
+argument_list|(
+name|commit
+argument_list|,
+literal|null
+argument_list|)
+decl_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 comment|// Simplistic check: just verify all segments_N's still
 comment|// exist, and, I can open a reader on each:
 name|dir
